Implement disk cache for LLM api (#29)
* Initial implementation

* Pass CI?

* Check if table exist before clearing

* rollback and add metadata create_all

* create if table not exists

* Pass CI, please

* This will pass, really.

* pass ci

* Fix test

* Enhance testing

* Enhance structure

* Update filename

* More testing

* Update examples

--- a/exp/instruct_qa.ipynb
+++ b/exp/instruct_qa.ipynb
@@ -74,18 +74,14 @@
     "        value=\"You are a helpful AI. Answer the question using the following information:\",\n",
     "    ).value\n",
     "\n",
-    "    return (\n",
-    "        completion(\n",
-    "            model=\"gpt-3.5-turbo\",  # TODO: selectable\n",
-    "            messages=[\n",
-    "                {\"role\": \"system\", \"content\": f\"{system_prefix} {context}\"},\n",
-    "                {\"role\": \"user\", \"content\": question},\n",
-    "            ],\n",
-    "            temperature=0.0,\n",
-    "        )\n",
-    "        .choices[0]\n",
-    "        .message.content\n",
-    "    )\n",
+    "    return completion(\n",
+    "        model=\"gpt-3.5-turbo\",  # TODO: selectable\n",
+    "        messages=[\n",
+    "            {\"role\": \"system\", \"content\": f\"{system_prefix} {context}\"},\n",
+    "            {\"role\": \"user\", \"content\": question},\n",
+    "        ],\n",
+    "        temperature=0.0,\n",
+    "    )[\"choices\"][0][\"message\"][\"content\"]\n",
     "\n",
     "\n",
     "def ask2(question: str, context: str):\n",
@@ -94,18 +90,14 @@
     "        value=\"You are a helpful AI. Answer the question using the following information:\",\n",
     "    ).value\n",
     "\n",
-    "    return (\n",
-    "        completion(\n",
-    "            model=\"gpt-3.5-turbo\",  # TODO: selectable\n",
-    "            messages=[\n",
-    "                {\"role\": \"system\", \"content\": f\"{system_prefix} {context}\"},\n",
-    "                {\"role\": \"user\", \"content\": question},\n",
-    "            ],\n",
-    "            temperature=0.0,\n",
-    "        )\n",
-    "        .choices[0]\n",
-    "        .message.content\n",
-    "    )\n",
+    "    return completion(\n",
+    "        model=\"gpt-3.5-turbo\",  # TODO: selectable\n",
+    "        messages=[\n",
+    "            {\"role\": \"system\", \"content\": f\"{system_prefix} {context}\"},\n",
+    "            {\"role\": \"user\", \"content\": question},\n",
+    "        ],\n",
+    "        temperature=0.0,\n",
+    "    )[\"choices\"][0][\"message\"][\"content\"]\n",
     "\n",
     "\n",
     "def pipeline(question: str, context: str):\n",
