--- a/examples/yelp_review.ipynb
+++ b/examples/yelp_review.ipynb
@@ -84,8 +84,8 @@
     "import fastrepl\n",
     "from fastrepl.run.cache import SQLiteCache\n",
     "\n",
-    "# fastrepl.cache = SQLiteCache()\n",
-    "fastrepl.cache = None"
+    "# fastrepl.cache = None\n",
+    "fastrepl.cache = SQLiteCache()"
    ]
   },
   {
@@ -166,7 +166,7 @@
     "# Let's define our first eval\n",
     "result_1 = Evaluator(\n",
     "    dataset=dataset,\n",
-    "    evals=[\n",
+    "    pipeline=[\n",
     "        LLMChainOfThoughtClassifier(\n",
     "            model=\"gpt-3.5-turbo\",\n",
     "            context=\"You will get a input text from Yelp review. Please rate it from 1 to 5 stars.\",\n",
@@ -243,7 +243,7 @@
     "\n",
     "result_2 = Evaluator(\n",
     "    dataset=dataset,\n",
-    "    evals=[\n",
+    "    pipeline=[\n",
     "        LLMChainOfThought(\n",
     "            model=\"gpt-3.5-turbo\",\n",
     "            labels=labels,\n",
