Use REPL context for evaluation (#34)
* Move evaluator to eval package

* Change structure

* Now we run evaluator inside REPL

* Update yelp example

* Move context to loop

* Cleanup import

* Brighter red!

* Fix import

--- a/exp/instruct_clustering.ipynb
+++ b/exp/instruct_clustering.ipynb
@@ -106,7 +106,7 @@
    ],
    "source": [
     "from IPython.display import display\n",
-    "from fastrepl import Analyze\n",
+    "from fastrepl.loop import Analyze\n",
     "\n",
     "with Analyze() as ctr:\n",
     "    embed(\"\")\n",
@@ -119,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from fastrepl import REPL\n",
+    "from fastrepl.loop import REPL\n",
     "from fastrepl.eval.metric import load_metric\n",
     "\n",
     "\n",
