--- a/exp/llama_index_instruct_embedding.ipynb
+++ b/exp/llama_index_instruct_embedding.ipynb
@@ -42,7 +42,7 @@
     "from llama_index.embeddings.base import BaseEmbedding\n",
     "\n",
     "from fastrepl.polish.updatable import Updatable\n",
-    "from fastrepl import Analyze, REPL"
+    "from fastrepl.loop import Analyze, REPL"
    ]
   },
   {
