--- a/exp/moderation.ipynb
+++ b/exp/moderation.ipynb
@@ -91,7 +91,7 @@
    ],
    "source": [
     "from IPython.display import display\n",
-    "from fastrepl import Analyze\n",
+    "from fastrepl.loop import Analyze\n",
     "\n",
     "with Analyze() as ctr:\n",
     "    openai_3()\n",
