--- a/exp/wandb.ipynb
+++ b/exp/wandb.ipynb
@@ -201,7 +201,7 @@
    ],
    "source": [
     "from IPython.display import display\n",
-    "from fastrepl import REPL\n",
+    "from fastrepl.loop import REPL\n",
     "\n",
     "project_name = \"wandb_example\"\n",
     "\n",
@@ -226,17 +226,6 @@
     "    display(\n",
     "        repl.build_report(save=True, path=\"./auto_report.html\"),\n",
     "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from fastrepl import load_report\n",
-    "\n",
-    "load_report()"
    ]
   }
  ],
