--- a/examples/basic.ipynb
+++ b/examples/basic.ipynb
@@ -90,7 +90,7 @@
    ],
    "source": [
     "from IPython.display import display\n",
-    "from fastrepl import Analyze\n",
+    "from fastrepl.loop import Analyze\n",
     "\n",
     "with Analyze() as controller:\n",
     "    llm_chain(\"\")\n",
