New abstraction and package structure (#40)
* Use fullpath in LocalContext

* Enable jupyter support in rich by default

* Add name to output of graph

* Rewrite of REPLContext

* Initial graph rewrite

* working on simplify packages

* Add custom error types

* Fix unwanted interrupt by DuplicatedKeyError

* Updatable and UpdatableREPL should co-exist

* Deal with circular import

* Fix tests

* Initial implementation of runner

* Apply runner

* We should have single, shared Updatable

* Add EmptyGraphError

* Update benchmark

* Avoide circular import

* Fix re-initialization of key

* Update docs

* Update basic example

* Remove repl notebook

--- a/examples/yelp_review.ipynb
+++ b/examples/yelp_review.ipynb
@@ -2,32 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pip install -qq \"rich[jupyter]\""
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import fastrepl\n",
-    "from fastrepl.run.cache import SQLiteCache\n",
+    "from fastrepl.cache import SQLiteCache\n",
     "\n",
-    "fastrepl.cache = None\n",
-    "# fastrepl.cache = SQLiteCache()"
+    "fastrepl.llm_cache = None\n",
+    "# fastrepl.llm_cache = SQLiteCache()"
    ]
   },
   {
