--- a/exp/instruct_qa.ipynb
+++ b/exp/instruct_qa.ipynb
@@ -56,7 +56,7 @@
    "outputs": [],
    "source": [
     "from fastrepl.polish import Updatable\n",
-    "from fastrepl.run import completion\n",
+    "from fastrepl.llm import completion\n",
     "\n",
     "\n",
     "def embed(sentence: str):\n",
