--- a/examples/yelp_review.ipynb
+++ b/examples/yelp_review.ipynb
@@ -2,20 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import fastrepl\n",
-    "from fastrepl.cache import SQLiteCache\n",
+    "import fastrepl.repl as fastrepl\n",
     "\n",
-    "fastrepl.llm_cache = None\n",
-    "# fastrepl.llm_cache = SQLiteCache()"
+    "# fastrepl.llm_cache = None\n",
+    "fastrepllm_cache = fastrepl.cache.SQLiteCache()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,17 +69,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from fastrepl.eval.metric import load_metric\n",
-    "\n",
-    "\n",
     "def print_metric(metric_name, predictions, references):\n",
-    "    metric = load_metric(metric_name)\n",
+    "    metric = fastrepl.load_metric(metric_name)\n",
     "    result = metric.compute(predictions=predictions, references=references)\n",
     "    print(f\"{metric_name}: {result[metric_name]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "62b5314f4394470f8de397f0a6bfa070",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy: 0.26666666666666666\n",
+      "mse: 7.7\n",
+      "mae: 2.1666666666666665\n"
+     ]
+    }
+   ],
+   "source": [
+    "clear_output(wait=True)\n",
+    "\n",
+    "# Let's define our first eval\n",
+    "eval = fastrepl.Evaluator(\n",
+    "    pipeline=[\n",
+    "        fastrepl.LLMChainOfThoughtClassifier(\n",
+    "            model=\"gpt-3.5-turbo\",\n",
+    "            context=\"You will get a input text from Yelp review. Please rate it from 1 to 5 stars.\",\n",
+    "            labels=labels,\n",
+    "        )\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "result = fastrepl.LocalRunner(evaluator=eval, dataset=dataset).run()\n",
+    "\n",
+    "predictions = [label_to_score(label) for label in result[\"prediction\"]]\n",
+    "references = dataset[\"reference\"]\n",
+    "\n",
+    "print_metric(\"accuracy\", predictions, references)\n",
+    "print_metric(\"mse\", predictions, references)\n",
+    "print_metric(\"mae\", predictions, references)"
    ]
   },
   {
@@ -91,7 +163,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f0a71d68e85348d4aa00f1be8fa5fd42",
+       "model_id": "259bae0bdbc94c61bc5f39992231921c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -129,90 +201,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy: 0.3333333333333333\n",
-      "mse: 5.633333333333334\n",
-      "mae: 1.7\n"
-     ]
-    }
-   ],
-   "source": [
-    "clear_output(wait=True)\n",
-    "\n",
-    "from fastrepl.eval.model import LLMChainOfThoughtClassifier\n",
-    "from fastrepl.eval import Evaluator\n",
-    "from fastrepl.loop import REPL\n",
-    "\n",
-    "# Let's define our first eval\n",
-    "eval = Evaluator(\n",
-    "    pipeline=[\n",
-    "        LLMChainOfThoughtClassifier(\n",
-    "            model=\"gpt-3.5-turbo\",\n",
-    "            context=\"You will get a input text from Yelp review. Please rate it from 1 to 5 stars.\",\n",
-    "            labels=labels,\n",
-    "        )\n",
-    "    ]\n",
-    ")\n",
-    "\n",
-    "with REPL() as repl:\n",
-    "    repl.set_evaluator(eval)\n",
-    "\n",
-    "    _predictions = repl.eval(dataset[\"input\"])\n",
-    "    predictions = [label_to_score(label) for label in _predictions]\n",
-    "\n",
-    "    print_metric(\"accuracy\", predictions, dataset[\"reference\"])\n",
-    "    print_metric(\"mse\", predictions, dataset[\"reference\"])\n",
-    "    print_metric(\"mae\", predictions, dataset[\"reference\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1cdccdbdc7e745b5ae3caacca75de823",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
-      ],
-      "text/plain": []
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "accuracy: 0.5666666666666667\n",
-      "mse: 1.4\n",
-      "mae: 0.7333333333333333\n"
+      "accuracy: 0.5333333333333333\n",
+      "mse: 1.4333333333333333\n",
+      "mae: 0.7666666666666667\n"
      ]
     }
    ],
@@ -220,31 +211,29 @@
     "clear_output(wait=True)\n",
     "\n",
     "# Let's see if we can get more reliable results\n",
-    "from fastrepl.eval.model import LLMChainOfThought, LLMClassifier\n",
     "\n",
-    "eval = Evaluator(\n",
+    "eval = fastrepl.Evaluator(\n",
     "    pipeline=[\n",
-    "        LLMChainOfThought(\n",
+    "        fastrepl.LLMChainOfThought(\n",
     "            model=\"gpt-3.5-turbo\",\n",
     "            labels=labels,\n",
     "            context=\"You will get a input text from Yelp review. Please rate it from 1 to 5 stars.\",\n",
     "        ),\n",
-    "        LLMClassifier(\n",
+    "        fastrepl.LLMClassifier(\n",
     "            model=\"gpt-3.5-turbo\",\n",
     "            labels=labels,\n",
     "        ),\n",
     "    ]\n",
     ")\n",
     "\n",
-    "with REPL() as repl:\n",
-    "    repl.set_evaluator(eval)\n",
+    "result = fastrepl.LocalRunner(evaluator=eval, dataset=dataset).run()\n",
     "\n",
-    "    _predictions = repl.eval(dataset[\"input\"])\n",
-    "    predictions = [label_to_score(label) for label in _predictions]\n",
+    "predictions = [label_to_score(label) for label in result[\"prediction\"]]\n",
+    "references = dataset[\"reference\"]\n",
     "\n",
-    "    print_metric(\"accuracy\", predictions, dataset[\"reference\"])\n",
-    "    print_metric(\"mse\", predictions, dataset[\"reference\"])\n",
-    "    print_metric(\"mae\", predictions, dataset[\"reference\"])"
+    "print_metric(\"accuracy\", predictions, references)\n",
+    "print_metric(\"mse\", predictions, references)\n",
+    "print_metric(\"mae\", predictions, references)"
    ]
   }
  ],
