--- a/examples/yelp_review_basic.ipynb
+++ b/examples/yelp_review_basic.ipynb
@@ -55,16 +55,17 @@
     "}\n",
     "\n",
     "\n",
-    "def label_to_score(label):\n",
-    "    mapping = {\n",
+    "def label_to_score(example):\n",
+    "    label = example[\"prediction\"]\n",
+    "    example[\"prediction\"] = {\n",
     "        \"FIVE_STARS\": 5,\n",
     "        \"FOUR_STARS\": 4,\n",
     "        \"THREE_STARS\": 3,\n",
     "        \"TWO_STARS\": 2,\n",
     "        \"ONE_STAR\": 1,\n",
     "        \"UNKNOWN\": 0,\n",
-    "    }\n",
-    "    return mapping[label]"
+    "    }[label]\n",
+    "    return example"
    ]
   },
   {
@@ -87,7 +88,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "62b5314f4394470f8de397f0a6bfa070",
+       "model_id": "9b1ef3d1863543e29da0090591526a8b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -122,12 +123,26 @@
      "output_type": "display_data"
     },
     {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "082faf61546b433b92ab329f4685d76e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/30 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy: 0.26666666666666666\n",
-      "mse: 7.7\n",
-      "mae: 2.1666666666666665\n"
+      "accuracy: 0.2\n",
+      "mse: 8.166666666666666\n",
+      "mae: 2.3\n"
      ]
     }
    ],
@@ -146,13 +161,11 @@
     ")\n",
     "\n",
     "result = fastrepl.LocalRunner(evaluator=eval, dataset=dataset).run()\n",
+    "result = result.map(label_to_score)\n",
     "\n",
-    "predictions = [label_to_score(label) for label in result[\"prediction\"]]\n",
-    "references = dataset[\"reference\"]\n",
-    "\n",
-    "print_metric(\"accuracy\", predictions, references)\n",
-    "print_metric(\"mse\", predictions, references)\n",
-    "print_metric(\"mae\", predictions, references)"
+    "print_metric(\"accuracy\", result[\"prediction\"], result[\"reference\"])\n",
+    "print_metric(\"mse\", result[\"prediction\"], result[\"reference\"])\n",
+    "print_metric(\"mae\", result[\"prediction\"], result[\"reference\"])"
    ]
   },
   {
@@ -163,7 +176,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "259bae0bdbc94c61bc5f39992231921c",
+       "model_id": "0124d4f744f04674b34c89de923ef881",
        "version_major": 2,
        "version_minor": 0
       },
@@ -198,11 +211,25 @@
      "output_type": "display_data"
     },
     {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9d1377180aac43fa9c6c9bbdab37e731",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/30 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy: 0.5333333333333333\n",
-      "mse: 1.4333333333333333\n",
+      "accuracy: 0.5\n",
+      "mse: 1.3666666666666667\n",
       "mae: 0.7666666666666667\n"
      ]
     }
@@ -211,7 +238,6 @@
     "clear_output(wait=True)\n",
     "\n",
     "# Let's see if we can get more reliable results\n",
-    "\n",
     "eval = fastrepl.Evaluator(\n",
     "    pipeline=[\n",
     "        fastrepl.LLMChainOfThought(\n",
@@ -227,13 +253,11 @@
     ")\n",
     "\n",
     "result = fastrepl.LocalRunner(evaluator=eval, dataset=dataset).run()\n",
+    "result = result.map(label_to_score)\n",
     "\n",
-    "predictions = [label_to_score(label) for label in result[\"prediction\"]]\n",
-    "references = dataset[\"reference\"]\n",
-    "\n",
-    "print_metric(\"accuracy\", predictions, references)\n",
-    "print_metric(\"mse\", predictions, references)\n",
-    "print_metric(\"mae\", predictions, references)"
+    "print_metric(\"accuracy\", result[\"prediction\"], result[\"reference\"])\n",
+    "print_metric(\"mse\", result[\"prediction\"], result[\"reference\"])\n",
+    "print_metric(\"mae\", result[\"prediction\"], result[\"reference\"])"
    ]
   }
  ],
