--- a/examples/yelp_review_basic.ipynb
+++ b/examples/yelp_review_basic.ipynb
@@ -82,13 +82,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9b1ef3d1863543e29da0090591526a8b",
+       "model_id": "5491722c1cd94736926bfb9f3cf50ab1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -125,7 +125,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "082faf61546b433b92ab329f4685d76e",
+       "model_id": "68a105372256451f85e9448216ff7094",
        "version_major": 2,
        "version_minor": 0
       },
@@ -140,9 +140,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy: 0.2\n",
-      "mse: 8.166666666666666\n",
-      "mae: 2.3\n"
+      "accuracy: 0.26666666666666666\n",
+      "mse: 4.866666666666666\n",
+      "mae: 1.6666666666666667\n"
      ]
     }
    ],
@@ -154,7 +154,7 @@
     "    pipeline=[\n",
     "        fastrepl.LLMChainOfThoughtClassifier(\n",
     "            model=\"gpt-3.5-turbo\",\n",
-    "            context=\"You will get a input text from Yelp review. Take it seriously.\",\n",
+    "            context=\"You will get a input text from Yelp review. Please rate it from 1 to 5 stars.\",\n",
     "            labels=labels,\n",
     "        )\n",
     "    ]\n",
@@ -170,13 +170,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0124d4f744f04674b34c89de923ef881",
+       "model_id": "a2d1e0e0872046a58e3e057e17a519c3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -213,7 +213,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d1377180aac43fa9c6c9bbdab37e731",
+       "model_id": "1030e5fcb0004372b8852b46e001bbe0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -228,9 +228,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy: 0.5\n",
-      "mse: 1.3666666666666667\n",
-      "mae: 0.7666666666666667\n"
+      "accuracy: 0.5333333333333333\n",
+      "mse: 0.5666666666666667\n",
+      "mae: 0.5\n"
      ]
     }
    ],
