--- a/examples/yelp_review_basic.ipynb
+++ b/examples/yelp_review_basic.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import fastrepl.repl as fastrepl\n",
     "\n",
-    "# fastrepl.llm_cache = None\n",
-    "fastrepllm_cache = fastrepl.cache.SQLiteCache()"
+    "fastrepl.LLMCache.enable()"
    ]
   },
   {
@@ -82,13 +81,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5491722c1cd94736926bfb9f3cf50ab1",
+       "model_id": "143d7c5873b442fb9f010695a582a7cc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -123,26 +122,12 @@
      "output_type": "display_data"
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "68a105372256451f85e9448216ff7094",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/30 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy: 0.26666666666666666\n",
-      "mse: 4.866666666666666\n",
-      "mae: 1.6666666666666667\n"
+      "accuracy: 0.3\n",
+      "mse: 6.4\n",
+      "mae: 1.8666666666666667\n"
      ]
     }
    ],
@@ -170,13 +155,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a2d1e0e0872046a58e3e057e17a519c3",
+       "model_id": "ec0ce049336a416a8feb6bb12b35861f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -211,26 +196,12 @@
      "output_type": "display_data"
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1030e5fcb0004372b8852b46e001bbe0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/30 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "accuracy: 0.5333333333333333\n",
-      "mse: 0.5666666666666667\n",
-      "mae: 0.5\n"
+      "mse: 0.9666666666666667\n",
+      "mae: 0.6333333333333333\n"
      ]
     }
    ],
