--- a/examples/yelp_review_repl.ipynb
+++ b/examples/yelp_review_repl.ipynb
@@ -8,8 +8,7 @@
    "source": [
     "import fastrepl.repl as fastrepl\n",
     "\n",
-    "# fastrepl.llm_cache = None\n",
-    "fastrepllm_cache = fastrepl.cache.SQLiteCache()"
+    "fastrepl.LLMCache.enable()"
    ]
   },
   {
