Support num=2 to check consistency in runner (#93)
* Add overloading in runner

* Initial kappa implementation

* Add kappa based warning

* fix

* Update docs

--- a/docs/getting_started/quickstart.ipynb
+++ b/docs/getting_started/quickstart.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,9 +27,7 @@
     "import fastrepl\n",
     "\n",
     "# When using it in a notebook\n",
-    "import fastrepl.repl as fastrepl\n",
-    "\n",
-    "fastrepl.LLMCache.disable()"
+    "import fastrepl.repl as fastrepl"
    ]
   },
   {
@@ -43,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -51,11 +49,11 @@
       "text/plain": [
        "Dataset({\n",
        "    features: ['input'],\n",
-       "    num_rows: 300\n",
+       "    num_rows: 120\n",
        "})"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,8 +63,8 @@
     "from datasets import load_dataset\n",
     "\n",
     "ds = load_dataset(\"daily_dialog\", split=\"test\")\n",
-    "ds = ds.shuffle(12)\n",
-    "ds = ds.select(range(300))\n",
+    "ds = ds.shuffle(4)\n",
+    "ds = ds.select(range(120))\n",
     "\n",
     "\n",
     "def clean(text):\n",
@@ -97,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,19 +122,20 @@
     "\n",
     "Here are some notes about running the evaluator:\n",
     "\n",
-    "1. `ThreadPool` is used to make it faster (controlled by the `NUM_THREADS` environment variable).\n",
-    "2. Any errors from different LLM providers are properly handled and retried with backoff if necessary."
+    "1. `ThreadPool` is used to make it faster (controlled by the `NUM_THREADS` [environment variable](/getting_started/env.md)).\n",
+    "2. Any errors from different LLM providers are properly handled and retried with backoff if necessary.\n",
+    "3. Since we passed `num=2` to `run()`, it will execute same evaluation twice, and return two results. If there are high inconsistency between the two, you'll see [InconsistentPredictionWarning](/miscellaneous/warnings_and_errors)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c114a243add24664a72f5abde894ebc3",
+       "model_id": "d04f7adeea214949b31b70326946cbac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -148,18 +147,34 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-09-10 12:10:43,597 - 11720060928 - connectionpool.py-connectionpool:871 - WARNING: Retrying (Retry(total=1, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NameResolutionError(\"<urllib3.connection.HTTPSConnection object at 0x29cc827d0>: Failed to resolve 'api.openai.com' ([Errno 8] nodename nor servname provided, or not known)\")': /v1/chat/completions\n"
-     ]
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">/Users/yujonglee/dev/fastrepl/fastrepl/fastrepl/warnings.py:24: CompletionTruncatedWarning: B | \n",
+       "https://docs.fastrepl.com/miscellaneous/warnings_and_errors#completiontruncated\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "/Users/yujonglee/dev/fastrepl/fastrepl/fastrepl/warnings.py:24: CompletionTruncatedWarning: B | \n",
+       "https://docs.fastrepl.com/miscellaneous/warnings_and_errors#completiontruncated\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-09-10 12:11:09,697 - 11377176576 - _common.py-_common:105 - INFO: Backing off completion(...) for 2.5s (fastrepl.llm.RetryConstantException)\n"
-     ]
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">/Users/yujonglee/dev/fastrepl/fastrepl/fastrepl/warnings.py:24: CompletionTruncatedWarning: A | \n",
+       "https://docs.fastrepl.com/miscellaneous/warnings_and_errors#completiontruncated\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "/Users/yujonglee/dev/fastrepl/fastrepl/fastrepl/warnings.py:24: CompletionTruncatedWarning: A | \n",
+       "https://docs.fastrepl.com/miscellaneous/warnings_and_errors#completiontruncated\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -189,17 +204,17 @@
       "text/plain": [
        "Dataset({\n",
        "    features: ['input', 'prediction'],\n",
-       "    num_rows: 300\n",
+       "    num_rows: 120\n",
        "})"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result = fastrepl.LocalRunner(evaluator=evaluator, dataset=ds).run()\n",
+    "result = fastrepl.LocalRunner(evaluator=evaluator, dataset=ds).run(num=2)\n",
     "result"
    ]
   },
@@ -207,57 +222,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One interesting point to note is that, due to the due to `position_debias_strategy=\"consensus\"`, if the order of the labels affects the result, `fastrepl` will return `None`. It will return more meaningful value in the future."
+    "One interesting point to note is that, due to the `position_debias_strategy=\"consensus\"`, if the order of the labels affects the result, `fastrepl` will return `None`. We are be returning more meaningful value in the later version of `fastrepl`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "91"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n",
+      "37\n"
+     ]
     }
    ],
    "source": [
-    "result[\"prediction\"].count(None)"
+    "first_result = [row[0] for row in result[\"prediction\"]]\n",
+    "second_result = [row[1] for row in result[\"prediction\"]]\n",
+    "\n",
+    "print(first_result.count(None))\n",
+    "print(second_result.count(None))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we got a number."
+    "Now we got some numbers."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.4449760765550239"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.46464646464646464\n",
+      "0.43373493975903615\n"
+     ]
     }
    ],
    "source": [
-    "f = result[\"prediction\"].count(\"FUN\")\n",
-    "nf = result[\"prediction\"].count(\"NOT_FUN\")\n",
+    "def metric(result):\n",
+    "    f = result.count(\"FUN\")\n",
+    "    nf = result.count(\"NOT_FUN\")\n",
+    "    return f / (f + nf)\n",
     "\n",
-    "f / (f + nf)"
+    "\n",
+    "print(metric(first_result))\n",
+    "print(metric(second_result))"
    ]
   }
  ],
